[package]
name = "raspbian_temp"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tm1637-gpio-driver = "2.0.2"
rust_gpiozero = "0.2.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"