[package]
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"
name = "raspbian_temp"
version = "0.1.0"

[dependencies]
tm1637-gpio-driver = "2.0.4"

[dependencies.rust_gpiozero]
git = "https://github.com/mich2000/rust_gpiozero.git"

[profile]
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
