[package]
name = "raspo-touch"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = { path="../rust_gpiozero" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"